--- a/src/css/scss/test.scss
+++ b/src/css/scss/test.scss
@@ -5,7 +5,14 @@
 .df-link-content section.textWidgetAnnotation {
   display: none;
 }
-
+.df-link-content :is(.linkAnnotation,.buttonWidgetAnnotation.pushButton) > a {
+  position: absolute;
+  font-size: 1em;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .df-viewer::-webkit-scrollbar-button {
   height: 50px;
 }
