--- a/src/css/scss/main.scss
+++ b/src/css/scss/main.scss
@@ -701,7 +701,7 @@
 }
 
 //region Links and annotations
-.df-link-content, .df-text-content, .df-auto-link-content {
+.df-link-content, .df-text-content{
   position: absolute;
   top: 0;
   left: 0;
